# cityops-agent-harness

./: .env.example  .gitignore  README.md  claude.md  docker-compose.langfuse.override.yml  docker-compose.langfuse.yml  memory_promotion_review.md  notebook_complete_ollama.ipynb  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
data/: inspection_reports.json
docs/superpowers/plans/: 2026-07-21-foundation.md  2026-07-22-phase01-self-improving-copilot.md  2026-07-22-phase02-scheduled-briefings.md  2026-07-22-phase03-context-engineering.md  2026-07-24-phase04-evals.md
docs/superpowers/specs/: 2026-07-21-cityops-agent-harness-design.md
notebooks/: 00_setup.ipynb  01_self_improving_copilot_complete.ipynb  01_self_improving_copilot_todo.ipynb  02_scheduled_briefings_complete.ipynb  02_scheduled_briefings_todo.ipynb  03_context_engineering_complete.ipynb  03_context_engineering_todo.ipynb  04_evals_complete.ipynb  04_evals_todo.ipynb
src/cityops_harness/: __init__.py  checks.py  config.py  context.py  db.py  evals.py  improve.py  llm.py  promote.py  state.py  tracing.py
tests/: test_checks.py  test_config.py  test_context.py  test_db.py  test_evals.py  test_improve_decisions.py  test_improve_render.py  test_llm.py  test_make_student.py  test_promote.py  test_state.py  test_tracing.py
tools/: make_00_setup.py  make_01_notebook.py  make_02_notebook.py  make_03_notebook.py  make_04_notebook.py  make_student.py
